--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "babenkoivan/scout-elasticsearch-driver",
+    "name": "adiliogobira/scout-elasticsearch-driver",
     "type": "library",
     "description": "The Elasticsearch Driver for Laravel Scout",
     "keywords": [
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "elasticsearch/elasticsearch": ">=7.0 <7.4.0",
+        "elasticsearch/elasticsearch": ">=7.0",
         "laravel/scout": "^7.0|^8.0"
     },
     "require-dev": {
